--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^1.3.0",
     "ip": "^1.1.5",
     "luxon": "^1.4.3",
+    "moment": "^2.23.0",
     "mongodb": "^3.1.0",
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
